Secret key form

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
 <body>
     <!--<script src='../client/clientMain.js'></script>-->
     <script src='js/app-v0.0.1.js'></script>
-    <canvas id='main-canvas'></canvas>
+    <div id="container"></div>
 </body>
 </html>
